--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
     <button type="button" data-reset>Отчистить</button>
 
     <p class="js-output">Сумма: <span>0</span></p>
-    <!-- <script src="js/lesson-1/lesson-1-vars.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-input.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-numbers.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-strings.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-comparison-operators.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-logical-operators.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-segment.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-chat.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-subscription.js" type="module"></script> -->
-    <!-- <script src="js/lesson-1/lesson-1-branching.js" type="module"></script> -->
-    <!-- <script src="js/lesson-2/lesson-2-switchs.js" type="module"></script> -->
-    <!-- <script src="js/lesson-2/lesson-2-for-loop.js" type="module"></script> -->
-    <!-- <script src="js/lesson-2/lesson-2-purchase.js" type="module"></script> -->
-    <!-- <script src="js/lesson-2/lesson-2-discount.js" type="module"></script> -->
-    <script src="js/lesson-2/lesson-2-dom.js" type="module"></script>
+
+    <!-- <script src="./lesson-1/lesson-1-vars.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-input.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-numbers.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-strings.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-comparison-operators.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-logical-operators.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-segment.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-chat.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-subscription.js" type="module"></script> -->
+    <!-- <script src="./lesson-1/lesson-1-branching.js" type="module"></script> -->
+    <!-- <script src="./lesson-2/lesson-2-switchs.js" type="module"></script> -->
+    <!-- <script src="./lesson-2/lesson-2-for-loop.js" type="module"></script> -->
+    <!-- <script src="./lesson-2/lesson-2-purchase.js" type="module"></script> -->
+    <!-- <script src="./lesson-2/lesson-2-discount.js" type="module"></script> -->
+    <script src="./lesson-2/lesson-2-dom.js" type="module"></script>
 </body>
 
 </html>
